Fixed HTML5 Validation

--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -28,9 +29,9 @@
         <p>This network currently is in devleopment and will be peering with several networks across the US to gain routing data. Once enough data is collected, statistics will be posted here. Please find network and organization information below.</p>
         <div class="table">
             <ul>
-                <li><a href="https://search.arin.net/rdap/?query=ISL-360" class="item"><img src="images/arin.png"></a></li>
-                <li><a href="https://bgp.he.net/AS400191" class="item"><img src="images/he.png"></a></li>
-                <li><a href="https://bgpview.io/asn/400191" class="item"><img src="images/bgpview.png"></a></li>
+                <li><a href="https://search.arin.net/rdap/?query=ISL-360" class="item"><img src="images/arin.png" alt="ARIN""></a></li>
+                <li><a href="https://bgp.he.net/AS400191" class="item"><img src="images/he.png" alt="Hurricane Electric"></a></li>
+                <li><a href="https://bgpview.io/asn/400191" class="item"><img src="images/bgpview.png" alt="BGPView"></a></li>
             </ul> 
         </div>
     </div>
