even more spelling

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </nav>
   <div class="content">
         <h1 id="logo"></h1>
-        <pre id="routes-recieved">Recieving 899132 IPv4 Routes
+        <pre id="routes-receiving">Receiving 899132 IPv4 Routes
           140792 IPv6 Routes</pre>
   </div>
 </body>
